app-private-domain/ingress-k8s-dashboard.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: self-signed-ca-issuer
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    service.alpha.kubernetes.io/app-protocols: '{"https":"HTTPS"}'
  creationTimestamp: "2020-08-13T05:00:27Z"
  generation: 1
  labels:
    app.kubernetes.io/instance: k8s-dashboard
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: kubernetes-dashboard
    app.kubernetes.io/version: 2.0.3
    helm.sh/chart: kubernetes-dashboard-2.3.0
  name: k8s-dashboard-kubernetes-dashboard
  namespace: devops
  resourceVersion: "8163935"
  selfLink: /apis/extensions/v1beta1/namespaces/devops/ingresses/k8s-dashboard-kubernetes-dashboard
  uid: d87f0235-08d7-4964-8b1a-8226a40a3bfc
spec:
  rules:
  - host: k8s-dashboard.vndev.shopee.io
    http:
      paths:
      - backend:
          serviceName: k8s-dashboard-kubernetes-dashboard
          servicePort: 443
        path: /
  tls:
  - hosts:
    - k8s-dashboard.vndev.shopee.io
    secretName: k8s-dashboard-tls
status:
  loadBalancer:
    ingress:
    - ip: 35.247.137.155
